--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,7 @@ auto-checkout = openprocurement.api
 find-links = http://op:x9W3jZ@dist.quintagroup.com/op/
 
 [sources]
-openprocurement.api = git https://github.com/openprocurement/openprocurement.api.git branch=production
+openprocurement.api = git https://github.com/openprocurement/openprocurement.api.git branch=a168811274116846_dry_run
 
 [test]
 recipe = zc.recipe.egg:scripts
